--- a/SampleApp.Angular/src/app/app.component.html
+++ b/SampleApp.Angular/src/app/app.component.html
@@ -7,6 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
@@ -332,5 +333,4 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
-<router-outlet />
+<app-home/>
