--- a/SampleApp.Angular/src/Componetns/home/home.component.html
+++ b/SampleApp.Angular/src/Componetns/home/home.component.html
@@ -2,37 +2,18 @@
 
 <h3> Пользователи </h3>
 
-<table mat-table [dataSource]="users" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="login">
-      <th mat-header-cell *matHeaderCellDef> login </th>
-      <td mat-cell *matCellDef="let element"> {{element.login}} </td>
-    </ng-container>
-   
-    <tr mat-header-row *matHeaderRowDef="displayedColumnsUser"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnsUser;"></tr>
-  </table>
 
-<!--
-  <td>
-    <table mat-table [dataSource] ="roles" class="mat-elevation-z8">
-      <ng-container matColumnDef = "id">
-          <th mat-header-cell *matHeaderCellDef>RoleId</th>
-          <td mat-cell *matCellDef="let element">{{element.id}}</td>
-      </ng-container>
-      
-      <ng-container matColumnDef = "name">
-          <th mat-header-cell *matHeaderCellDef>RoleName</th>
-          <td mat-cell *matCellDef="let element">{{element.name}}</td>
-      </ng-container>
-      
-      <tr mat-header-row *matHeaderRowDef="displayedColumnsRole"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnsRole;"></tr>
-  
-  </table>
-  </td>
--->
+<table mat-table [dataSource] = "users" class="mat-elevation-z8">
+    <ng-container matColumnDef = "id">
+        <th mat-header-cell *matHeaderCellDef>Giud</th>
+        <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef = "name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
