--- a/SampleApp.Angular/src/Componetns/home/home.component.html
+++ b/SampleApp.Angular/src/Componetns/home/home.component.html
@@ -1,6 +1,6 @@
 
 
-<h3> Пользователи </h3>
+<h3> Главная страница </h3>
 <!--
 <table mat-table [dataSource]="users" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
