--- a/SampleApp.Angular/src/Componetns/auth/auth.component.html
+++ b/SampleApp.Angular/src/Componetns/auth/auth.component.html
@@ -1,20 +1,23 @@
 <div class = "auth">
     <h1>Авторизация</h1>
+    <form >
+    <p>
     <mat-form-field>
         <mat-label>Login</mat-label>
-            <input matInput name="login" type ="text" [(ngModel)]="model.login"]/>
+            <input matInput name="login" type ="text" [(ngModel)]="model.login"/>
     </mat-form-field>
-    
+    </p>
+    <p>
     <mat-form-field>
         <mat-label>Password</mat-label>
-        <input placeholder="Password" name="password" [(ngModel)]="model.password"]/>
+        <input matInput name="Password" type="password"  [(ngModel)]="model.password"/>
     </mat-form-field>
-
-    <button mat-button color="primary" type="sumbit">
-        <mat-icon>
-            login
-        </mat-icon>
+    </p>
+<p>
+    <button mat-flat-button color="primary" type="sumbit" (click)="login()">
+       
         Войти
     </button>
-    
+</p>
+</form>
 </div>
